[package]
name = "jc2mp-website-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
serde_json = "1.0.140"
wikitext_simplified = { git = "https://github.com/philpax/wikitext_simplified.git" }
# wikitext_simplified = { path = "../wikitext_simplified/wikitext_simplified" }
paxhtml = { git = "https://github.com/philpax/paxhtml.git" }
# paxhtml = { path = "../paxhtml/paxhtml" }

[dev-dependencies]
tempfile = "3"
